--- a/EPi.Libraries.BlockSearch.csproj
+++ b/EPi.Libraries.BlockSearch.csproj
@@ -175,6 +175,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataAnnotations\AdditionalSearchContentAttribute.cs" />
+    <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SearchInitialization.cs" />
   </ItemGroup>
