--- a/EPi.Libraries.BlockSearch.nuspec
+++ b/EPi.Libraries.BlockSearch.nuspec
@@ -10,8 +10,8 @@
     <iconUrl>http://jstemerdink.net/images/js-nuget.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
-    <releaseNotes>Added null check for block. When duplicating a page, a null exception can occur.</releaseNotes>
-    <copyright>Copyright © Jeroen Stemerdink 2014</copyright>
+    <releaseNotes>Updated for EPiServer 9.</releaseNotes>
+    <copyright>Copyright © Jeroen Stemerdink 2015</copyright>
     <tags>search blocks</tags>
     <dependencies>
       <dependency id="EPiServer.CMS.Core" version="[8.0.0, 9.0)" />
