--- a/packages.config
+++ b/packages.config
@@ -10,6 +10,6 @@
   <package id="Microsoft.AspNet.WebPages" version="2.0.20710.0" targetFramework="net45" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" developmentDependency="true" />
   <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net45" developmentDependency="true" />
-  <package id="structuremap.web-signed" version="3.1.6.186" targetFramework="net45" />
-  <package id="structuremap-signed" version="3.1.6.186" targetFramework="net45" />
+  <package id="structuremap.web-signed" version="3.1.6.186" targetFramework="net45" developmentDependency="true" />
+  <package id="structuremap-signed" version="3.1.6.186" targetFramework="net45" developmentDependency="true" />
 </packages>
