--- a/appveyor.yml
+++ b/appveyor.yml
@@ -31,7 +31,7 @@ deploy:
   skip_symbols: true
   artifact: /.*\.nupkg/
   on:
-    branch: develop             # release from develop branch only
+    branch: development             # release from develop branch only
     appveyor_repo_tag: true     # deploy on tag push only
 - provider: GitHub
   auth_token:
