--- a/appveyor.yml
+++ b/appveyor.yml
@@ -38,4 +38,4 @@ deploy:
   artifact: /.*\.zip/
   on:
     branch: master              # release from master branch only
-    appveyor_repo_tag: true     # deploy on tag push only
+    #appveyor_repo_tag: true     # deploy on tag push only     # deploy on tag push only
