--- a/EPi.Libraries.BlockSearch.nuspec
+++ b/EPi.Libraries.BlockSearch.nuspec
@@ -10,11 +10,11 @@
     <iconUrl>http://jstemerdink.net/images/js-nuget.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
-    <releaseNotes>Updated for EPiServer 9.</releaseNotes>
-    <copyright>Copyright © Jeroen Stemerdink 2015</copyright>
+    <releaseNotes>Updated to work with EPiServer 10.</releaseNotes>
+    <copyright>Copyright © Jeroen Stemerdink 2016</copyright>
     <tags>search blocks</tags>
     <dependencies>
-      <dependency id="EPiServer.CMS.Core" version="[9.0.3, 10.0)" />
+      <dependency id="EPiServer.CMS.Core" version="10.0.0" />
     </dependencies>
   </metadata>
   <files>
