--- a/EPi.Libraries.BlockSearch.csproj
+++ b/EPi.Libraries.BlockSearch.csproj
@@ -59,55 +59,55 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="EPiServer, Version=10.0.0.0, Culture=neutral, PublicKeyToken=8fe83dea738b45b7, processorArchitecture=MSIL">
-      <HintPath>packages\EPiServer.CMS.Core.10.0.0-pre-000111\lib\net45\EPiServer.dll</HintPath>
+      <HintPath>packages\EPiServer.CMS.Core.10.0.0\lib\net45\EPiServer.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="EPiServer.ApplicationModules, Version=10.0.0.0, Culture=neutral, PublicKeyToken=8fe83dea738b45b7, processorArchitecture=MSIL">
-      <HintPath>packages\EPiServer.Framework.10.0.0-pre-000111\lib\net45\EPiServer.ApplicationModules.dll</HintPath>
+      <HintPath>packages\EPiServer.Framework.10.0.0\lib\net45\EPiServer.ApplicationModules.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="EPiServer.Configuration, Version=10.0.0.0, Culture=neutral, PublicKeyToken=8fe83dea738b45b7, processorArchitecture=MSIL">
-      <HintPath>packages\EPiServer.CMS.Core.10.0.0-pre-000111\lib\net45\EPiServer.Configuration.dll</HintPath>
+      <HintPath>packages\EPiServer.CMS.Core.10.0.0\lib\net45\EPiServer.Configuration.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="EPiServer.Data, Version=10.0.0.0, Culture=neutral, PublicKeyToken=8fe83dea738b45b7, processorArchitecture=MSIL">
-      <HintPath>packages\EPiServer.Framework.10.0.0-pre-000111\lib\net45\EPiServer.Data.dll</HintPath>
+      <HintPath>packages\EPiServer.Framework.10.0.0\lib\net45\EPiServer.Data.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="EPiServer.Data.Cache, Version=10.0.0.0, Culture=neutral, PublicKeyToken=8fe83dea738b45b7, processorArchitecture=MSIL">
-      <HintPath>packages\EPiServer.Framework.10.0.0-pre-000111\lib\net45\EPiServer.Data.Cache.dll</HintPath>
+      <HintPath>packages\EPiServer.Framework.10.0.0\lib\net45\EPiServer.Data.Cache.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="EPiServer.Enterprise, Version=10.0.0.0, Culture=neutral, PublicKeyToken=8fe83dea738b45b7, processorArchitecture=MSIL">
-      <HintPath>packages\EPiServer.CMS.Core.10.0.0-pre-000111\lib\net45\EPiServer.Enterprise.dll</HintPath>
+      <HintPath>packages\EPiServer.CMS.Core.10.0.0\lib\net45\EPiServer.Enterprise.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="EPiServer.Events, Version=10.0.0.0, Culture=neutral, PublicKeyToken=8fe83dea738b45b7, processorArchitecture=MSIL">
-      <HintPath>packages\EPiServer.Framework.10.0.0-pre-000111\lib\net45\EPiServer.Events.dll</HintPath>
+      <HintPath>packages\EPiServer.Framework.10.0.0\lib\net45\EPiServer.Events.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="EPiServer.Framework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=8fe83dea738b45b7, processorArchitecture=MSIL">
-      <HintPath>packages\EPiServer.Framework.10.0.0-pre-000111\lib\net45\EPiServer.Framework.dll</HintPath>
+      <HintPath>packages\EPiServer.Framework.10.0.0\lib\net45\EPiServer.Framework.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="EPiServer.ImageLibrary, Version=10.0.0.0, Culture=neutral, PublicKeyToken=8fe83dea738b45b7, processorArchitecture=MSIL">
-      <HintPath>packages\EPiServer.CMS.Core.10.0.0-pre-000111\lib\net45\EPiServer.ImageLibrary.dll</HintPath>
+      <HintPath>packages\EPiServer.CMS.Core.10.0.0\lib\net45\EPiServer.ImageLibrary.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="EPiServer.Licensing, Version=10.0.0.0, Culture=neutral, PublicKeyToken=8fe83dea738b45b7, processorArchitecture=MSIL">
-      <HintPath>packages\EPiServer.Framework.10.0.0-pre-000111\lib\net45\EPiServer.Licensing.dll</HintPath>
+      <HintPath>packages\EPiServer.Framework.10.0.0\lib\net45\EPiServer.Licensing.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="EPiServer.LinkAnalyzer, Version=10.0.0.0, Culture=neutral, PublicKeyToken=8fe83dea738b45b7, processorArchitecture=MSIL">
-      <HintPath>packages\EPiServer.CMS.Core.10.0.0-pre-000111\lib\net45\EPiServer.LinkAnalyzer.dll</HintPath>
+      <HintPath>packages\EPiServer.CMS.Core.10.0.0\lib\net45\EPiServer.LinkAnalyzer.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="EPiServer.Web.WebControls, Version=10.0.0.0, Culture=neutral, PublicKeyToken=8fe83dea738b45b7, processorArchitecture=MSIL">
-      <HintPath>packages\EPiServer.CMS.Core.10.0.0-pre-000111\lib\net45\EPiServer.Web.WebControls.dll</HintPath>
+      <HintPath>packages\EPiServer.CMS.Core.10.0.0\lib\net45\EPiServer.Web.WebControls.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="EPiServer.XForms, Version=10.0.0.0, Culture=neutral, PublicKeyToken=8fe83dea738b45b7, processorArchitecture=MSIL">
-      <HintPath>packages\EPiServer.CMS.Core.10.0.0-pre-000111\lib\net45\EPiServer.XForms.dll</HintPath>
+      <HintPath>packages\EPiServer.CMS.Core.10.0.0\lib\net45\EPiServer.XForms.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
