--- a/EPi.Libraries.BlockSearch.csproj
+++ b/EPi.Libraries.BlockSearch.csproj
@@ -138,6 +138,7 @@
   <ItemGroup>
     <Compile Include="DataAnnotations\AdditionalSearchContentAttribute.cs" />
     <Compile Include="GlobalSuppressions.cs" />
+    <Compile Include="Helper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SearchInitialization.cs" />
   </ItemGroup>
