--- a/packages.config
+++ b/packages.config
@@ -2,10 +2,10 @@
 <packages>
   <package id="Castle.Core" version="4.2.1" targetFramework="net461" developmentDependency="true" />
   <package id="Castle.Windsor" version="4.1.0" targetFramework="net461" developmentDependency="true" />
-  <package id="EPiServer.CMS.AspNet" version="11.1.0-pre-000288" targetFramework="net461" developmentDependency="true" />
-  <package id="EPiServer.CMS.Core" version="11.1.0-pre-000288" targetFramework="net461" developmentDependency="true" />
-  <package id="EPiServer.Framework" version="11.1.0-pre-000288" targetFramework="net461" developmentDependency="true" />
-  <package id="EPiServer.Framework.AspNet" version="11.1.0-pre-000288" targetFramework="net461" developmentDependency="true" />
+  <package id="EPiServer.CMS.AspNet" version="11.1.0" targetFramework="net461" developmentDependency="true" />
+  <package id="EPiServer.CMS.Core" version="11.1.0" targetFramework="net461" developmentDependency="true" />
+  <package id="EPiServer.Framework" version="11.1.0" targetFramework="net461" developmentDependency="true" />
+  <package id="EPiServer.Framework.AspNet" version="11.1.0" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.20710.0" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.AspNet.Razor" version="2.0.20710.0" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.AspNet.WebPages" version="2.0.20710.0" targetFramework="net461" developmentDependency="true" />
