Changes for appveyor

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,21 +1,21 @@
 version: 1.0.{build}
 #image: Visual Studio 2013
-image: Visual Studio 2017
+image: Visual Studio 2022
 configuration: Release
 environment:
   github_token: 'secure: TaDEavUfTj6EgwcO7y5njQVS5Z9bBU/fVFuSApo5XEO6FSBT5UzJQmyJjbhIFDZb'
   myget_token: 'secure: 9Z+KYPk2hI7hg9kYLv/N13fvoqcYCP96isNUkRrKu0v87cw85H62oe/DCwpqvBXF'
 install:
 - choco install gitversion.portable -pre -y
-- choco install "msbuild-sonarqube-runner" -y
+- choco install "sonarscanner-msbuild-net50" -y
 - cmd: nuget sources add -Name EPiServerFeed -Source http://nuget.episerver.com/feed/packages.svc/
 before_build:
 - cmd: nuget restore
 - ps: gitversion /l console /output buildserver /updateAssemblyInfo
 build_script:
-  - MSBuild.SonarQube.Runner.exe begin /k:"jstemerdink:EPi.Libraries.BlockSearch" /n:"EPi.Libraries.BlockSearch" /d:"sonar.host.url=https://sonarcloud.io" /d:"sonar.organization=jstemerdink-github" /d:"sonar.login=0b0eec6902ab7d776899f79bfeff15d313dd6e09"
-  - msbuild "EPi.Libraries.BlockSearch.sln"
-  - MSBuild.SonarQube.Runner.exe end /d:"sonar.login=0b0eec6902ab7d776899f79bfeff15d313dd6e09"
+  - dotnet C:\ProgramData\chocolatey\lib\sonarscanner-msbuild-net5\tools\SonarScanner.MSBuild.dll begin /k:"jstemerdink:EPi.Libraries.BlockSearch" /n:"EPi.Libraries.BlockSearch" /d:"sonar.host.url=https://sonarcloud.io" /d:"sonar.organization=jstemerdink-github" /d:"sonar.login=0b0eec6902ab7d776899f79bfeff15d313dd6e09"
+  - dotnet build "EPi.Libraries.BlockSearch.sln"
+  - dotnet C:\ProgramData\chocolatey\lib\sonarscanner-msbuild-net5\tools\SonarScanner.MSBuild.dll end /d:"sonar.login=0b0eec6902ab7d776899f79bfeff15d313dd6e09"
 after_build:
 - cmd: nuget pack EPi.Libraries.BlockSearch.csproj -version "%GitVersion_NuGetVersion%" -prop "target=%CONFIGURATION%"
 - cmd: appveyor PushArtifact "EPi.Libraries.BlockSearch.%GitVersion_NuGetVersion%.nupkg"
