--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,6 +5,12 @@ configuration: Release
 environment:
   github_token: 'secure: TaDEavUfTj6EgwcO7y5njQVS5Z9bBU/fVFuSApo5XEO6FSBT5UzJQmyJjbhIFDZb'
   myget_token: 'secure: 9Z+KYPk2hI7hg9kYLv/N13fvoqcYCP96isNUkRrKu0v87cw85H62oe/DCwpqvBXF'
+
+init:
+  - set PATH=C:\Program Files\Java\jdk15\bin;%PATH%
+  - set JAVA_HOME_11_X64=C:\Program Files\Java\jdk15
+  - set JAVA_HOME=C:\Program Files\Java\jdk15
+
 install:
 - choco install gitversion.portable -pre -y
 - choco install "sonarscanner-msbuild-net50" -y
