--- a/EPi.Libraries.BlockSearch.nuspec
+++ b/EPi.Libraries.BlockSearch.nuspec
@@ -14,8 +14,9 @@
     <copyright>Copyright © Jeroen Stemerdink 2022</copyright>
     <tags>search blocks</tags>
     <dependencies>
-      <dependency id="EPiServer.CMS.Core" version="12.0.3" />
-      <dependency id="EPiServer.CMS.AspNetCore" version="12.0.3" />
+	    <group targetFramework="net5.0" />
+		<dependency id="EPiServer.CMS.Core" version="[12.0.3, 13.0.0)" />
+		<dependency id="EPiServer.CMS.AspNetCore" version="[12.0.3, 13.0.0)" />
     </dependencies>
   </metadata>
   <files>
