--- a/EPi.Libraries.BlockSearch.csproj
+++ b/EPi.Libraries.BlockSearch.csproj
@@ -26,7 +26,7 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <GeneratePackageOnBuild>False</GeneratePackageOnBuild>
     <NoWin32Manifest>true</NoWin32Manifest>
     <PackageIcon>icon.png</PackageIcon>
     <Copyright>Copyright © Jeroen Stemerdink 2022</Copyright>
